<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/gasolina_x_etanol"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:contentDescription="@string/imagem"
                    android:src="@mipmap/ic_launcher" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:padding="8dp">

                <EditText
                    android:id="@+id/edit_gasolina"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:hint="@string/r_litro_gasolina"
                    android:inputType="numberDecimal"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edit_etanol"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:hint="@string/r_litro_etanol"
                    android:inputType="numberDecimal"
                    android:textSize="16sp" />

            </LinearLayout>

            <Button
                android:id="@+id/button_calcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:text="@string/calcular"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_resultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:text="@string/resultado"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_limpar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/limpar"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_salvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/salvar"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_finalizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/finalizar"
                android:textSize="16sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>